missed part of Tribal AO ex description

--- a/src/registrar/templates/includes/ao_example.html
+++ b/src/registrar/templates/includes/ao_example.html
@@ -57,5 +57,6 @@
 {% elif organization_type == 'tribal' %}
   <h3>Tribal governments</h3>
   <p>Domain requests from federally recognized tribal governments must be authorized by the tribal leader the <a "usa-link usa-link--external" rel="noopener noreferrer" target="_blank" href="https://www.bia.gov/service/tribal-leaders-directory">Bureau of Indian Affairs</a> recognizes.</p>
+  <p>Domain requests from state-recognized tribal governments must be authorized by the tribal leader the individual state recognizes.</p>
 
 {% endif %}
