--- a/src/registrar/templates/home.html
+++ b/src/registrar/templates/home.html
@@ -39,7 +39,7 @@
       <thead>
         <tr>
           <th data-sortable scope="col" role="columnheader">Domain name</th>
-          <th data-sortable scope="col" role="columnheader">Date created</th>
+          <th data-sortable scope="col" role="columnheader">Expires</th>
           <th data-sortable scope="col" role="columnheader">Status</th>
           <th scope="col" role="columnheader"><span class="usa-sr-only">Action</span></th>
         </tr>
@@ -50,7 +50,7 @@
           <th th scope="row" role="rowheader" data-label="Domain name">
             {{ domain.name }}
           </th>
-          <td data-sort-value="{{ domain.created_time|date:"U" }}" data-label="Date created">{{ domain.created_time|date }}</td>
+          <td data-sort-value="{{ domain.expiration_date|date:"U" }}" data-label="Expires">{{ domain.expiration_date|date }}</td>
           <td data-label="Status">
             {% if domain.state == "unknown" or domain.state == "dns needed"%}
                 DNS needed
@@ -99,7 +99,7 @@
       <thead>
         <tr>
           <th data-sortable scope="col" role="columnheader">Domain name</th>
-          <th data-sortable scope="col" role="columnheader">Date created</th>
+          <th data-sortable scope="col" role="columnheader">Date submitted</th>
           <th data-sortable scope="col" role="columnheader">Status</th>
           <th scope="col" role="columnheader"><span class="usa-sr-only">Action</span></th>
         </tr>
@@ -110,7 +110,13 @@
           <th th scope="row" role="rowheader" data-label="Domain name">
             {{ application.requested_domain.name|default:"New domain request" }}
           </th>
-          <td data-sort-value="{{ application.created_at|date:"U" }}" data-label="Date created">{{ application.created_at|date }}</td>
+          <td data-sort-value="{{ application.submission_date|date:"U" }}" data-label="Date submitted">
+            {% if application.submission_date %}
+              {{ application.submission_date|date }}
+            {% else %}
+              Not submitted
+            {% endif %}
+          </td>
           <td data-label="Status">{{ application.get_status_display }}</td>
           <td>
              {% if application.status == "started" or application.status == "action needed" or application.status == "withdrawn"  %}
