made sure external link icon shows up

--- a/src/registrar/templates/includes/ao_example.html
+++ b/src/registrar/templates/includes/ao_example.html
@@ -2,7 +2,7 @@
   {% if federal_type == 'executive' %}
     <h3>Executive branch federal agencies</h3>
     <p>Domain requests from executive branch federal agencies must be authorized by the agency's CIO or the head of the agency.</p>
-    <p>See <a "usa-link usa-link--external" rel="noopener noreferrer" target="_blank" href="https://www.whitehouse.gov/wp-content/uploads/2023/02/M-23-10-DOTGOV-Act-Guidance.pdf">OMB Memorandum M-23-10</a> for more information.</p>
+    <p>See <a class="usa-link usa-link--external" rel="noopener noreferrer" target="_blank" href="https://www.whitehouse.gov/wp-content/uploads/2023/02/M-23-10-DOTGOV-Act-Guidance.pdf">OMB Memorandum M-23-10</a> for more information.</p>
 
   {% elif federal_type == 'judicial' %}
     <h3>Judicial branch federal agencies</h3>
@@ -56,7 +56,7 @@
 
 {% elif organization_type == 'tribal' %}
   <h3>Tribal governments</h3>
-  <p>Domain requests from federally-recognized tribal governments must be authorized by the tribal leader the <a "usa-link usa-link--external" rel="noopener noreferrer" target="_blank" href="https://www.bia.gov/service/tribal-leaders-directory">Bureau of Indian Affairs</a> recognizes.</p>
+  <p>Domain requests from federally-recognized tribal governments must be authorized by the tribal leader the <a class="usa-link usa-link--external" rel="noopener noreferrer" target="_blank" href="https://www.bia.gov/service/tribal-leaders-directory">Bureau of Indian Affairs</a> recognizes.</p>
   <p>Domain requests from state-recognized tribal governments must be authorized by the tribal leader the individual state recognizes.</p>
 
 {% endif %}
