submission_date set on application submit; refactored index.py; display of expired in both home page and domain detail page

--- a/src/registrar/templates/domain_detail.html
+++ b/src/registrar/templates/domain_detail.html
@@ -5,8 +5,9 @@
   {{ block.super }}
   <div class="margin-top-4 tablet:grid-col-10">
 
+    
     <div
-        class="usa-summary-box dotgov-status-box margin-top-3 padding-left-2{% if domain.state == domain.State.UNKNOWN or domain.state == domain.State.DNS_NEEDED%} dotgov-status-box--action-need{% endif %}"
+        class="usa-summary-box dotgov-status-box margin-top-3 padding-left-2{% if not domain.is_expired %}{% if domain.state == domain.State.UNKNOWN or domain.state == domain.State.DNS_NEEDED %} dotgov-status-box--action-need{% endif %}{% endif %}"
         role="region"
         aria-labelledby="summary-box-key-information"
     >
@@ -17,7 +18,9 @@
           <span class="text-bold text-primary-darker">
             Status:
           </span>
-            {% if domain.state == domain.State.UNKNOWN or domain.state == domain.State.DNS_NEEDED%}
+            {% if domain.is_expired %}
+              Expired
+            {% elif domain.state == domain.State.UNKNOWN or domain.state == domain.State.DNS_NEEDED%}
               DNS needed
             {% else %}
                 {{ domain.state|title }}
@@ -26,6 +29,7 @@
       </div>
     </div>
     <br>
+    
 
     {% include "includes/domain_dates.html" %}
 
