--- a/src/registrar/templates/home.html
+++ b/src/registrar/templates/home.html
@@ -52,7 +52,9 @@
           </th>
           <td data-sort-value="{{ domain.expiration_date|date:"U" }}" data-label="Expires">{{ domain.expiration_date|date }}</td>
           <td data-label="Status">
-            {% if domain.state == "unknown" or domain.state == "dns needed"%}
+            {% if domain.is_expired %}
+                Expired
+            {% elif domain.state == "unknown" or domain.state == "dns needed"%}
                 DNS needed
             {% else %}
                 {{ domain.state|title }}
@@ -114,7 +116,7 @@
             {% if application.submission_date %}
               {{ application.submission_date|date }}
             {% else %}
-              Not submitted
+              <span class="text-base">Not submitted</span>
             {% endif %}
           </td>
           <td data-label="Status">{{ application.get_status_display }}</td>
