Remove review page from pa11y, move the building of modal header into the view, edit test (wip)

--- a/src/registrar/templates/application_form.html
+++ b/src/registrar/templates/application_form.html
@@ -101,11 +101,11 @@
         <div
           class="usa-modal"
           id="toggle-submit-domain-request"
-          aria-labelledby="Are you sure you want to continue?"
-          aria-describedby="Your DNSSEC records will be deleted from the registry."
+          aria-labelledby="Are you sure you want to submit a domain request?"
+          aria-describedby="Are you sure you want to submit a domain request?"
           data-force-action
         >
-            {% include 'includes/modal.html' with modal_heading="You are about to submit a domain request for yourcity.gov." modal_description="Once you submit this request, you won’t be able to make further edits until it’s reviewed by our staff. You’ll only be able to withdraw your request." modal_button=modal_button|safe %}
+            {% include 'includes/modal.html' with modal_heading=modal_heading|safe modal_description="Once you submit this request, you won’t be able to make further edits until it’s reviewed by our staff. You’ll only be able to withdraw your request." modal_button=modal_button|safe %}
         </div>
 
 {% block after_form_content %}{% endblock %}
