--- a/src/registrar/templates/application_done.html
+++ b/src/registrar/templates/application_done.html
@@ -19,11 +19,11 @@
   <h2>Next steps in this process</h2>
 
   <p> We'll review your request. This usually takes 20 business days. During
-  this review we'll verify that your:</p> 
+  this review we'll verify that:</p> 
   <ul class="usa-list">
-    <li>Organization is eligible for a .gov domain</li>
-    <li>Authorizing official approves your request</li> 
-    <li>Domain meets our naming requirements</li>
+    <li>Your organization is eligible for a .gov domain.</li>
+    <li>You work at the organization and/or can make requests on its behalf.</li> 
+    <li>Your requested domain meets our naming requirements.</li>
   </ul>
 
   <p> You can <a href="{% url 'home' %}">check the status</a>
