--- a/src/registrar/templates/application_done.html
+++ b/src/registrar/templates/application_done.html
@@ -27,7 +27,7 @@
   </ul>
 
   <p> You can <a href="{% url 'home' %}">check the status</a>
-      of your request at any time. We'll email you with any questions or when we 
+      of your request at any time. We'll email you if we have questions and when we 
       complete our review.</p>
 
 </main>
