--- a/src/registrar/templates/403.html
+++ b/src/registrar/templates/403.html
@@ -23,7 +23,7 @@
       {% endif %}
       <p>
         You must be an authorized user and need to be signed in to view this page. 
-        Would you like to <a href="{% url 'login' %}"> try logging in again</a>?
+        <a href="{% url 'login' %}"> Try logging in again</a>.
       </p>
       <p>
         If you'd like help with this error <a class="usa-link" rel="noopener noreferrer" target="_blank" href="{% public_site_url 'contact' %}">contact us</a>.
