Add import for public_site_url

--- a/src/registrar/templates/includes/domain_application.html
+++ b/src/registrar/templates/includes/domain_application.html
@@ -1,3 +1,5 @@
+{% load url_helpers %}
+
 <h2 class="margin-top-0 margin-bottom-2 text-primary-darker text-semibold" > 
   Next steps in this process
 </h2>
