Added contact form to request confirmation page

--- a/src/registrar/templates/application_done.html
+++ b/src/registrar/templates/application_done.html
@@ -1,5 +1,6 @@
 {% extends 'base.html' %}
 {% load static %}
+{% load url_helpers %}
 
 {% block title %}Thanks for your domain request! | {% endblock %}
 
@@ -27,8 +28,7 @@
   </ul>
 
   <p> You can <a href="{% url 'home' %}">check the status</a>
-      of your request at any time. We'll email you if we have questions and when we 
-      complete our review.</p>
+      of your request at any time. We’ll email you if we have questions and when we complete our review. <a class="usa-link" rel="noopener noreferrer" target="_blank" href="{% public_site_url 'contact' %}">Contact us with any questions</a>.</p>
 
 </main>
 {% endblock %}
