--- a/src/registrar/templates/application_authorizing_official.html
+++ b/src/registrar/templates/application_authorizing_official.html
@@ -6,7 +6,9 @@
     Who is the authorizing official for your organization?
   </h2>
 
-<p>Your authorizing official is a person within your organization who can authorize your domain request. This person must be in a role of significant, executive responsibility within the organization.</p>
+  {% if not is_federal %}
+  <p>Your authorizing official is a person within your organization who can authorize your domain request. This person must be in a role of significant, executive responsibility within the organization.</p>
+  {% endif %}
 
   <div class="ao_example">
     {% include "includes/ao_example.html" %}
