--- a/src/registrar/templates/admin/index.html
+++ b/src/registrar/templates/admin/index.html
@@ -14,12 +14,18 @@
             See the commit "Review for ticket #999"
         {% endcomment %}
 
-        <label for="start">Start date:</label>
-        <input type="date" id="start" name="trip-start" value="2018-07-22" min="2018-01-01" />
-        <label for="end">End date:</label>
-        <input type="date" id="end" name="trip-end" value="2023-12-19" min="2023-12-01" />
+        <div class="display-flex flex-align-baseline flex-justify margin-y-2">
+            <div>
+                <label for="start">Start date:</label>
+                <input type="date" id="start" name="start" value="2018-07-22" min="2018-01-01" />
+            </div>
+            <div>
+                <label for="end">End date:</label>
+                <input type="date" id="end" name="end" value="2023-12-01" min="2023-12-01" />
+            </div>
 
-        <button id="exportLink" data-export-url="{% url 'admin_export_data' %}" type="button" class="button">Export</button>
+            <button id="exportLink" data-export-url="{% url 'admin_export_data' %}" type="button" class="button">Export</button>
+        </div>
 
     </div>
 </div>
