Change prime marks to apostrophes

--- a/src/registrar/templates/application_done.html
+++ b/src/registrar/templates/application_done.html
@@ -15,12 +15,12 @@
         />
     <h1>Thanks for your domain request!</h1>
   </span>
-  <p>We'll email a copy of your request to you.</p>
+  <p>We’ll email a copy of your request to you.</p>
 
   <h2>Next steps in this process</h2>
 
-  <p> We'll review your request. This usually takes 20 business days. During
-  this review we'll verify that:</p> 
+  <p> We’ll review your request. This usually takes 20 business days. During
+  this review we’ll verify that:</p> 
   <ul class="usa-list">
     <li>Your organization is eligible for a .gov domain.</li>
     <li>You work at the organization and/or can make requests on its behalf.</li> 
