Updated next steps

--- a/src/registrar/templates/application_done.html
+++ b/src/registrar/templates/application_done.html
@@ -27,8 +27,10 @@
     <li>Your requested domain meets our naming requirements.</li>
   </ul>
 
-  <p> You can <a href="{% url 'home' %}">check the status</a>
-      of your request at any time. We’ll email you if we have questions and when we complete our review. <a class="usa-link" rel="noopener noreferrer" target="_blank" href="{% public_site_url 'contact' %}">Contact us with any questions</a>.</p>
+  <p> We’ll email you if we have questions and when we complete our review. You can <a href="{% url 'home' %}">check the status</a>
+      of your request at any time on the registrar homepage.</p> 
+  
+  <p> <a class="usa-link" rel="noopener noreferrer" target="_blank" href="{% public_site_url 'contact' %}">Contact us if you need help during this process</a>.</p>
 
 </main>
 {% endblock %}
