Typo fixes and cleanup

--- a/src/registrar/templates/admin/index.html
+++ b/src/registrar/templates/admin/index.html
@@ -4,7 +4,7 @@
 <div id="content-main">
     {% include "admin/app_list.html" with app_list=app_list show_changelinks=True %}
     <div class="custom-content module">
-        <h2>Welcome to the Custom Admin Homepage!</h2>
+        <h2>Domain growth report</h2>
 
         {% comment %} 
             Inputs of type date suck for accessibility.
