--- a/src/registrar/templates/includes/ao_example.html
+++ b/src/registrar/templates/includes/ao_example.html
@@ -1,5 +1,6 @@
 {% if is_federal %}
   {% if federal_type == 'executive' %}
+    <p>ignore</p>
     <h3>Executive branch federal agencies</h3>
     <p>Domain requests from executive branch federal agencies must be authorized by the agency's CIO or the head of the agency.</p>
     <p>See <a class="usa-link usa-link--external" rel="noopener noreferrer" target="_blank" href="https://www.whitehouse.gov/wp-content/uploads/2023/02/M-23-10-DOTGOV-Act-Guidance.pdf">OMB Memorandum M-23-10</a> for more information.</p>
