updated markup to align with updated figma flow

--- a/src/registrar/templates/application_intro.html
+++ b/src/registrar/templates/application_intro.html
@@ -5,7 +5,7 @@
 <main id="main-content" class="grid-container">
     <div class="grid-col desktop:grid-offset-2 desktop:grid-col-8">
 
-    <form class="usa-form usa-form--large" method="post" novalidate>
+    <form class="usa-form usa-form--extra-large" method="post" novalidate>
         {% csrf_token %}
 
         <h1>You're about to start your .gov domain request.</h1>
