--- a/src/registrar/templates/application_other_contacts.html
+++ b/src/registrar/templates/application_other_contacts.html
@@ -1,24 +1,3 @@
-<script type="text/javascript">
-
-  // document.getElementById("languages").addEventListener('click', function (event) {
-  //     if (event.target && event.target.matches("input[type='radio']")) {
-  //         // do something here ...
-  //     }
-  // });
-  
-  // $(function() {
-    $('input[name="other_contacts-has_other_contacts"]').on('click', function() {
-        if ($(this).val() == '0') {
-            $('#other_contacts_formset').show();
-        }
-        else {
-            $('#other_contacts_formset').hide();
-            // TODO: clear all forms (on submit ONLY) if NO is selected
-        }
-    });
-  // })
-  </script>
-
 {% extends 'application_form.html' %}
 {% load static field_helpers %}
 
@@ -30,13 +9,31 @@
       <li>We typically don’t reach out to these employees, but if contact is necessary, our practice is to coordinate first with you, the requestor. </li>
     </ul>
   </p>
-
 {% endblock %}
 
 {% block form_required_fields_help_text %}
 {% include "includes/required_fields.html" %}
 {% endblock %}
 
+<script type="text/javascript" nonce="{{request.csp_nonce}}">
+
+  document.getElementById("other_contacts-has_other_contacts").addEventListener('click', function (event) {
+      // if (event.target && event.target.matches("input[type='radio']")) {
+      //     // do something here ...
+      // }
+      print("hey")
+  });
+  
+  $('input[name="other_contacts-has_other_contacts"]').addEventListener('click', function() {
+      print("click")
+      if ($(this).val() == '0') {
+          $('#other_contacts_formset').show();
+      }
+      else {
+          $('#other_contacts_formset').hide();
+      }
+  });
+  </script>
 {% block form_fields %}
   {{ forms.0 }}
   {# forms.0 is a small yes/no form that toggles the visibility of "other contact" formset #}
@@ -44,6 +41,8 @@
   <option value="{{v}}">{{val}}</option>
   {% endfor %} -->
 
+  <!-- style="{% if domain.has_other_contacts%} display:none {% endif %}" -->
+  
   <div id="other_contacts_formset">
   {{ forms.1.management_form }}
   {# forms.1 is a formset and this iterates over its forms #}
