--- a/src/registrar/templates/application_dotgov_domain.html
+++ b/src/registrar/templates/application_dotgov_domain.html
@@ -1,58 +1,92 @@
 {% extends 'application_form.html' %}
-{% load static field_helpers %}
+{% load static field_helpers url_helpers %}
 
 {% block form_instructions %}
-  <p>To help us assess your eligibility for a .gov domain, please provide contact information for other employees from your organization.
+  <p>Before requesting a .gov domain, <a class="usa-link" rel="noopener noreferrer" target="_blank" href="{% public_site_url 'domains/choosing' %}">please make sure it
+  meets our naming requirements</a>. Your domain name must:
     <ul class="usa-list">
-      <li>They should be clearly and publicly affiliated with your organization and familiar with your domain request. </li>
-      <li>They don't need to be involved with the technical management of your domain (although they can be). </li>
-      <li>We typically don’t reach out to these employees, but if contact is necessary, our practice is to coordinate first with you, the requestor. </li>
+      <li>Be available </li>
+      <li>Be unique </li>
+      <li>Relate to your organization’s name, location, and/or services </li>
+      <li>Be clear to the general public. Your domain name must not be easily confused
+      with other organizations.</li>
     </ul>
   </p>
 
+  <p>Note that <strong>only federal agencies can request generic terms</strong> like
+  vote.gov.</p>
+
+  <p>We’ll try to give you the domain you want. We first need to make sure your request
+  meets our requirements. We’ll work with you to find the best domain for your
+  organization.</p>
+
+  <h2 class="margin-top-3">Domain examples for your type of organization</h2>
+  <div class="domain_example">
+    {% include "includes/domain_example.html" %}
+  </div>
 {% endblock %}
+
 
 {% block form_required_fields_help_text %}
-{% include "includes/required_fields.html" %}
+{# empty this block so it doesn't show on this page #}
 {% endblock %}
 
+
 {% block form_fields %}
+
   {{ forms.0.management_form }}
-  {# forms.0 is a small yes/no form that toggles the visibility of "other contact" formset #}
-  {% for val, choice in forms.0.YES_NO_CHOICES %}
-  <option value="{{v}}">{{val}}</option>
-  {% endfor %}
 
-  <div>
-  {{ forms.1.management_form }}
-  {# forms.1 is a formset and this iterates over its forms #}
-  {% for form in forms.1.forms %}
-    <fieldset class="usa-fieldset">
-      <legend>
-        <h2>Organization contact {{ forloop.counter }} (optional)</h2>
-      </legend>
+  <fieldset class="usa-fieldset margin-top-2">
+    <legend>
+      <h2>What .gov domain do you want?</h2>
+    </legend>
 
-      {% input_with_errors form.first_name %}
+    <p id="domain_instructions" class="margin-top-05">After you enter your domain, we’ll make sure it’s
+    available and that it meets some of our naming requirements. If your domain passes
+    these initial checks, we’ll verify that it meets all of our requirements once you
+    complete and submit the rest of this form.</p>
 
-      {% input_with_errors form.middle_name %}
-
-      {% input_with_errors form.last_name %}
-
-      {% input_with_errors form.title %}
-
-      {% input_with_errors form.email %}
-
-      {% with add_class="usa-input--medium" %}
-        {% input_with_errors form.phone %}
+    {% with attr_aria_describedby="domain_instructions domain_instructions2" %}
+      {# attr_validate / validate="domain" invokes code in get-gov.js #}
+      {% with append_gov=True attr_validate="domain" add_label_class="usa-sr-only" %}
+        {% input_with_errors forms.0.requested_domain %}
       {% endwith %}
+    {% endwith %}
+    <button
+      type="button"
+      class="usa-button"
+      validate-for="{{ forms.0.requested_domain.auto_id }}"
+    >Check availability</button>
+  </fieldset>
 
-    </fieldset>
-  {% endfor %}
+  {{ forms.1.management_form }}
 
-  <button type="submit" name="submit_button" value="save" class="usa-button usa-button--unstyled">
-    <svg class="usa-icon" aria-hidden="true" focusable="false" role="img" width="24" height="24">
-      <use xlink:href="{%static 'img/sprite.svg'%}#add_circle"></use>
-    </svg><span class="margin-left-05">Add another contact</span>
-  </button>
-</div>
+  <fieldset class="usa-fieldset margin-top-1">
+    <legend>
+      <h2>Alternative domains (optional)</h2>
+    </legend>
+
+    <p id="alt_domain_instructions" class="margin-top-05">Are there other domains you’d like if we can’t give
+    you your first choice?</p>
+
+    {% with attr_aria_describedby="alt_domain_instructions" %}
+      {# attr_validate / validate="domain" invokes code in get-gov.js #}
+      {# attr_auto_validate likewise triggers behavior in get-gov.js #}
+      {% with append_gov=True attr_validate="domain" attr_auto_validate=True %}
+        {% for form in forms.1 %}
+          {% input_with_errors form.alternative_domain %}
+        {% endfor %}
+      {% endwith %}
+    {% endwith %}
+
+    <button type="submit" name="submit_button" value="save" class="usa-button usa-button--unstyled">
+      <svg class="usa-icon" aria-hidden="true" focusable="false" role="img" width="24" height="24">
+        <use xlink:href="{%static 'img/sprite.svg'%}#add_circle"></use>
+      </svg><span class="margin-left-05">Add another alternative</span>
+    </button>
+
+  </fieldset>
+
+  <p id="domain_instructions2">If you’re not sure this is the domain you want, that’s
+  okay. You can change it later.</p>
 {% endblock %}
