Temporary fix for email field layout

--- a/src/registrar/templates/application_other_contacts.html
+++ b/src/registrar/templates/application_other_contacts.html
@@ -52,7 +52,9 @@
 
             {% input_with_errors form.title %}
 
-            {% input_with_errors form.email %}
+            <div class="margin-top-3">
+                {% input_with_errors form.email %}
+            </div>
 
             {% with add_class="usa-input--medium" %}
                 {% input_with_errors form.phone %}
