--- a/src/registrar/templates/domain_users.html
+++ b/src/registrar/templates/domain_users.html
@@ -58,8 +58,10 @@
           aria-describedby="Your DNSSEC records will be deleted from the registry."
           data-force-action
         >
-          <form method="POST" action="{% url "invitation-delete" pk=permission.user.id %}">
-            {% include 'includes/modal.html' with modal_heading="Warning: You are about to remove all DS records on your domain" modal_description="To fully disable DNSSEC: In addition to removing your DS records here you’ll also need to delete the DS records at your DNS host. To avoid causing your domain to appear offline you should wait to delete your DS records at your DNS host until the Time to Live (TTL) expires. This is often less than 24 hours, but confirm with your provider." modal_button=modal_button|safe %}
+          <form method="POST" action="{% url "domain-user-delete" pk=domain.id user_pk=permission.user.id %}">
+            {% with heading="Are you sure you want to remove <"|add:permission.user.email|add:">?" %}
+              {% include 'includes/modal.html' with modal_heading=heading  modal_description="<"|add:permission.user.email|add:"> will no longer be able to manage the domain "|add:domain.name|add:"." modal_button=modal_button|safe %}
+            {% endwith %}
           </form>
         </div>
         </td>
