--- a/src/registrar/templates/domain_users.html
+++ b/src/registrar/templates/domain_users.html
@@ -43,27 +43,28 @@
         <td data-label="Role">{{ permission.role|title }}</td>
         <td class="shift-action-button">
           <a
-          id="button-toggle-user-alert-{{ forloop.counter }}"
-          href="#toggle-user-alert-{{ forloop.counter }}"
-          class="usa-button--unstyled"
-          aria-controls="toggle-user-alert-{{ forloop.counter }}"
-          data-open-modal
-          >Remove</a
-        >
-        {# Use data-force-action to take esc out of the equation and pass cancel_button_resets_ds_form to effectuate a reset in the view #}
-        <div
-          class="usa-modal"
-          id="toggle-user-alert-{{ forloop.counter }}"
-          aria-labelledby="Are you sure you want to continue?"
-          aria-describedby="User will be removed"
-          data-force-action
-        >
-          <form method="POST" action="{% url "domain-user-delete" pk=domain.id user_pk=permission.user.id %}">
-            {% with heading="Are you sure you want to remove <"|add:permission.user.email|add:">?" %}
-              {% include 'includes/modal.html' with modal_heading=heading  modal_description="<"|add:permission.user.email|add:"> will no longer be able to manage the domain "|add:domain.name|add:"." modal_button=modal_button|safe %}
-            {% endwith %}
-          </form>
-        </div>
+            id="button-toggle-user-alert-{{ forloop.counter }}"
+            href="#toggle-user-alert-{{ forloop.counter }}"
+            class="usa-button--unstyled"
+            aria-controls="toggle-user-alert-{{ forloop.counter }}"
+            data-open-modal
+          >
+            Remove
+          </a>
+
+          <div
+            class="usa-modal"
+            id="toggle-user-alert-{{ forloop.counter }}"
+            aria-labelledby="Are you sure you want to continue?"
+            aria-describedby="User will be removed"
+            data-force-action
+          >
+            <form method="POST" action="{% url "domain-user-delete" pk=domain.id user_pk=permission.user.id %}">
+              {% with heading="Are you sure you want to remove <"|add:permission.user.email|add:">?" %}
+                {% include 'includes/modal.html' with modal_heading=heading  modal_description="<"|add:permission.user.email|add:"> will no longer be able to manage the domain "|add:domain.name|add:"." modal_button=modal_button|safe %}
+              {% endwith %}
+            </form>
+          </div>
         </td>
       </tr>
       {% endfor %}
